Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137147

Auto-links to deprecated functions fail when alternatives exist

XMLWordPrintable

    • b3a127575 (dev)

      Auto-links like the one to addAction() in the QMenu documentation fail because the function was deprecated despite the existence of QWidget::addAction() functions.

      It could be that the auto-linking process stops when it finds a deprecated member shadowing a valid link target.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            david.boddie David Boddie
            david.boddie David Boddie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes